--- a/app/src/main/res/layout/activity_registro_salida.xml
+++ b/app/src/main/res/layout/activity_registro_salida.xml
@@ -59,9 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
                 android:layout_marginEnd="18dp"
-                android:background="@drawable/edt_background"
                 android:drawableStart="@drawable/ic_baseline_search"
                 android:ems="10"
                 android:hint="Placa"
@@ -73,6 +71,28 @@
                 tools:ignore="TouchTargetSizeCheck" />
 
 
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:text="Ticket"
+                android:textStyle="bold"/>
+
+            <EditText
+                android:id="@+id/txtBuscarPorTicket"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="18dp"
+                android:drawableStart="@drawable/ic_baseline_search"
+                android:ems="10"
+                android:hint="Ticket"
+                android:inputType="textPersonName"
+                android:paddingLeft="10dp"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <Button
                 android:id="@+id/btnBuscarIdRegistro"
@@ -88,6 +108,32 @@
 
 
             <TextView
+                android:id="@+id/textView29"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold"
+                android:text="Placa" />
+
+            <TextView
+                android:id="@+id/txtPlacaSalida"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/edt_background"
+                android:editable="false"
+                android:ems="10"
+                android:focusable="false"
+                android:hint="Placa"
+                android:textAlignment="center"
+                android:textSize="17sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
                 android:id="@+id/textView13"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -101,16 +147,16 @@
                 android:id="@+id/txtIdVehiculoSalida"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
-                android:ems="10"
-                android:hint="Id Vehiculo"
-                android:inputType="textPersonName"
-                android:textSize="17sp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/edt_background"
                 android:editable="false"
+                android:ems="10"
                 android:focusable="false"
-                android:background="@drawable/edt_background2"
+                android:hint="Id Vehículo"
+                android:inputType="textPersonName"
                 android:textAlignment="center"
+                android:textSize="17sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtFechaSalida"
@@ -138,7 +184,7 @@
                 android:textSize="17sp"
                 android:editable="false"
                 android:focusable="false"
-                android:background="@drawable/edt_background2"
+                android:background="@drawable/edt_background"
                 android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -163,7 +209,7 @@
                 android:layout_marginEnd="10dp"
                 android:hint="ID Persona"
                 android:textSize="17sp"
-                android:background="@drawable/edt_background2"
+                android:background="@drawable/edt_background"
                 android:textAlignment="center"
                 />
 
@@ -187,7 +233,7 @@
                 android:hint="Ticket"
                 android:textAlignment="center"
                 android:textSize="17sp"
-                android:background="@drawable/edt_background2"
+                android:background="@drawable/edt_background"
                 />
 
             <TextView
@@ -212,7 +258,7 @@
                 android:textSize="17sp"
                 android:editable="false"
                 android:focusable="false"
-                android:background="@drawable/edt_background2"
+                android:background="@drawable/edt_background"
                 android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -243,7 +289,7 @@
                 android:textSize="17sp"
                 android:editable="false"
                 android:focusable="false"
-                android:background="@drawable/edt_background2"
+                android:background="@drawable/edt_background"
                 android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -273,7 +319,7 @@
                 android:focusable="false"
                 android:inputType="textPersonName"
                 android:textSize="17sp"
-                android:background="@drawable/edt_background2"
+                android:background="@drawable/edt_background"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="TouchTargetSizeCheck" />
