--- a/app/src/main/res/layout/activity_escanear_placa.xml
+++ b/app/src/main/res/layout/activity_escanear_placa.xml
@@ -12,8 +12,9 @@
         android:id="@+id/textView9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="REGISTRO ENTRADA"
-        android:textSize="25dp"
+        android:text="Registro de Entrada"
+        android:textStyle="bold"
+        android:textSize="24sp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +55,7 @@
               android:layout_marginStart="10dp"
               android:layout_marginTop="10dp"
               android:layout_marginEnd="10dp"
-              android:text="PLACA"
+              android:text="Placa del Vehículo"
               android:textStyle="bold"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +70,7 @@
               android:layout_marginEnd="10dp"
               android:layout_marginStart="10dp"
               android:drawableStart="@drawable/ic_baseline_search"
-              android:hint="Placa del Vehiculo"
+              android:hint="Placa del Vehículo"
               android:inputType="textPersonName"
               app:layout_constraintEnd_toStartOf="@+id/btnBuscar"
               app:layout_constraintStart_toStartOf="parent"
@@ -151,7 +152,7 @@
               android:text="Placa" />
 
           <TextView
-              android:id="@+id/txtPlacaR"
+              android:id="@+id/txtPlacaEntrada"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginEnd="10dp"
@@ -207,7 +208,6 @@
               android:hint="Marca"
               android:textSize="17sp"
               android:textAlignment="center"
-              app:layout_constraintStart_toEndOf="@+id/txtPlacaR"
               app:layout_constraintTop_toBottomOf="@+id/txtPlacaBuscar" />
 
           <TextView
@@ -437,6 +437,18 @@
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView6"
               tools:ignore="TouchTargetSizeCheck" />
+
+          <TextView
+              android:id="@+id/txtEstadoEntrada"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginStart="10dp"
+              android:layout_marginTop="10dp"
+              android:layout_marginEnd="10dp"
+              android:hint="Estado"
+              android:textStyle="bold"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"/>
 
           <TextView
               android:id="@+id/t2"
