--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="193dp"
             android:layout_height="174dp"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="68dp"
+            android:layout_marginStart="115dp"
+            android:layout_marginTop="30dp"
             android:layout_marginBottom="10dp"
+
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/logo_parkingg"
             tools:layout_editor_absoluteX="200dp"
@@ -28,42 +31,40 @@
 
         <EditText
             android:id="@+id/edittxtUser"
-            android:layout_width="match_parent"
-            android:layout_height="51dp"
-            android:layout_gravity="center"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="72dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="21dp"
-            android:textColor="@color/white"
             android:backgroundTint="@color/white"
             android:drawableStart="@drawable/ic_baseline_person"
             android:hint="Usuario"
+            android:textColor="@color/white"
             android:textColorHint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
-            android:id="@+id/edittxtClave"
+            android:id="@+id/edittxtClave1"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="51dp"
-            android:layout_marginRight="51dp"
-            android:layout_marginBottom="60dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="21dp"
             android:backgroundTint="@color/white"
             android:drawableStart="@drawable/ic_baseline_lock_24"
-            android:ems="10"
             android:hint="Password"
-            android:inputType="textPassword"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            android:inputType="textPassword" />
 
         <Button
             android:id="@+id/btnLogin"
@@ -72,10 +73,12 @@
             android:layout_margin="40dp"
             android:layout_marginStart="40dp"
             android:layout_marginLeft="40dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="40dp"
             android:backgroundTint="@color/white"
             android:text="Iniciar Sesión"
             android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints" />
 
@@ -87,6 +90,8 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="25dp"
             android:text="&quot;&quot;"
+            android:textColor="@color/white"
+
             tools:ignore="MissingConstraints" />
 
     </LinearLayout>
