--- a/app/src/main/res/layout/activity_registro_salida.xml
+++ b/app/src/main/res/layout/activity_registro_salida.xml
@@ -118,7 +118,7 @@
                 android:text="Placa" />
 
             <TextView
-                android:id="@+id/txtPlacaSalida"
+                android:id="@+id/txtPlacaEntrada"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -325,14 +325,39 @@
                 tools:ignore="TouchTargetSizeCheck" />
 
             <TextView
+                android:id="@+id/textViewUser2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:text="ID Usuario"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/txtIdUsuarioSalida"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:ems="10"
+                android:hint="Usuario"
+                android:inputType="textPersonName"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtObservacionesSalida"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <TextView
                 android:id="@+id/textView19"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
-                android:textStyle="bold"
-                android:text="ID Bloque" />
+                android:layout_marginEnd="10dp"
+                android:text="ID Bloque"
+                android:textStyle="bold" />
 
             <Spinner
                 android:id="@+id/spinner3"
@@ -389,33 +414,15 @@
         tools:ignore="TouchTargetSizeCheck" />
 
 
-
             <TextView
-                android:id="@+id/textView18"
+                android:id="@+id/txtEstadoSalida"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:textStyle="bold"
-                android:text="ID Usuario" />
-
-            <EditText
-        android:id="@+id/txtIdUsuarioSalida"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-        android:ems="10"
-        android:hint="Usuario"
-        android:inputType="textPersonName"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtObservacionesSalida"
-        tools:ignore="TouchTargetSizeCheck" />
-
-
+                android:hint="Estado" />
 
             <TextView
                 android:id="@+id/t3"
