--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Menu">
+    tools:context=".MenuApp">
 
 
     <LinearLayout
@@ -72,7 +72,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="55dp"
             android:layout_marginEnd="20dp"
-            android:backgroundTint="#FE2E2E"
+            android:backgroundTint="#04B404"
             android:text="Registro Entrada de vehículos" />
 
         <Button
@@ -82,7 +82,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:backgroundTint="#04B404"
+            android:backgroundTint="#FE2E2E"
             android:text="Registro Salida de vehículos" />
 
     </LinearLayout>
