--- a/app/src/main/res/menu/menu_options.xml
+++ b/app/src/main/res/menu/menu_options.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_settings"
-        android:title="Settings" />
+        android:title="Opciones" />
     <item
         android:id="@+id/action_help"
-        android:title="Help" />
+        android:title="Ayuda" />
     <item
         android:id="@+id/action_logout"
         android:title="Cerrar sesión"/>
